--- a/styles/styles.css
+++ b/styles/styles.css
@@ -315,6 +315,7 @@ header {
   display: flex;
   -webkit-perspective: 1000px;
           perspective: 1000px;
+  position: relative;
 }
 
 .hero img {
@@ -336,35 +337,47 @@ header {
           transform: rotateX(40deg);
 }
 
-.hero .heroTitle {
+.hero .titleContainer .heroTitle {
   display: inline-block;
   width: 100%;
   margin: 0;
 }
 
-.hero .first {
+.hero .arrowContainer {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 100%;
+  left: 45%;
+}
+
+.hero .arrowContainer .first,
+.hero .arrowContainer .second,
+.hero .arrowContainer p {
   color: #fee91c;
+}
+
+.hero .arrowContainer .first {
   font-size: 3.8rem;
   position: absolute;
-  top: 100%;
-  left: 46%;
+  top: -11%;
 }
 
-.hero i {
-  color: #fee91c;
+.hero .arrowContainer .second {
   font-size: 4.5rem;
-  position: absolute;
-  top: 102%;
-  left: 45.8%;
 }
 
-.hero p {
+.hero .arrowContainer p {
   font-size: 1.8rem;
-  font-style: italic;
-  color: #fee91c;
-  position: absolute;
-  top: 105%;
-  left: 42.5%;
+  margin-top: 0;
 }
 
 @-webkit-keyframes slideInLeft {
@@ -545,14 +558,17 @@ footer .footerContainer p {
   header {
     min-height: 75vh;
   }
-  header .heroTitle {
-    font-size: 6.5rem;
-  }
   header .hero img {
     width: 70%;
   }
   header .hero p {
     left: 41.5%;
+  }
+  header .hero .heroTitle {
+    font-size: 6.5rem;
+  }
+  header .hero .arrowContainer {
+    top: 115%;
   }
   form .saber .blueSaber {
     top: 57%;
@@ -572,26 +588,19 @@ footer .footerContainer p {
 
 @media (max-width: 768px) {
   header {
-    min-height: 46vh;
-  }
-  header .heroTitle {
-    font-size: 5.3rem;
+    min-height: 40vh;
   }
   header .hero img {
-    width: 100%;
+    width: 80%;
   }
-  header .hero .first {
-    font-size: 3.3rem;
-    top: 104%;
-    left: 46.1%;
+  header .hero .heroTitle {
+    font-size: 5.3rem;
   }
-  header .hero i {
+  header .hero .arrowContainer .first {
+    font-size: 3rem;
+  }
+  header .hero .arrowContainer .second {
     font-size: 4rem;
-    top: 107%;
-    left: 45.8%;
-  }
-  header .hero p {
-    left: 40%;
   }
   form .join,
   form .saber {
@@ -628,13 +637,16 @@ footer .footerContainer p {
 
 @media (max-width: 670px) {
   header {
-    min-height: 55vh;
-  }
-  header .heroTitle {
-    font-size: 4.5rem;
+    min-height: 45vh;
   }
   header .hero p {
     left: 38%;
+  }
+  header .hero .heroTitle {
+    font-size: 4.5rem;
+  }
+  header .hero .arrowContainer {
+    left: 40%;
   }
   form .join,
   form .saber {
@@ -661,24 +673,27 @@ footer .footerContainer p {
 
 @media (max-width: 480px) {
   header {
-    min-height: 42vh;
+    min-height: 32vh;
   }
-  header .heroTitle {
-    font-size: 3rem;
+  header .hero img {
+    width: 90%;
   }
   header .hero p {
     font-size: 1.5rem;
     top: 120%;
     left: 35.5%;
   }
-  header .hero .first {
-    font-size: 2.8rem;
-    top: 112%;
+  header .hero .heroTitle {
+    font-size: 3rem;
   }
-  header .hero i {
-    font-size: 3.5rem;
-    top: 115%;
-    left: 45.5%;
+  header .hero .arrowContainer {
+    left: 35%;
+  }
+  header .hero .arrowContainer .first {
+    font-size: 2.4rem;
+  }
+  header .hero .arrowContainer .second {
+    font-size: 3.2rem;
   }
   form .join,
   form .saber {
@@ -702,22 +717,25 @@ footer .footerContainer p {
 
 @media (max-width: 415px) {
   header {
-    min-height: 90vh;
-  }
-  header .heroTitle {
-    font-size: 2.5rem;
+    min-height: 34vh;
   }
   header .hero img {
-    padding-top: 40px;
+    padding-top: 10px;
   }
-  header .hero .first {
-    font-size: 2.3rem;
-    top: 112%;
+  header .hero .heroTitle {
+    font-size: 2.5rem;
   }
-  header .hero i {
-    font-size: 3rem;
-    top: 115%;
-    left: 45.5%;
+  header .hero .arrowContainer {
+    left: 30%;
+  }
+  header .hero .arrowContainer .first {
+    font-size: 2rem;
+  }
+  header .hero .arrowContainer .second {
+    font-size: 2.8rem;
+  }
+  header .hero .arrowContainer p {
+    font-size: 1.5rem;
   }
   form .saber .blueSaber {
     left: 20%;
@@ -732,20 +750,13 @@ footer .footerContainer p {
 
 @media (max-width: 375px) {
   header {
-    min-height: 45vh;
+    min-height: 30vh;
   }
-  header .heroTitle {
+  header .hero .heroTitle {
     font-size: 2.2rem;
   }
-  header .hero .first {
-    top: 127%;
-  }
-  header .hero i {
-    top: 130%;
-  }
-  header .hero p {
-    top: 135%;
-    left: 34.5%;
+  header .hero .arrowContainer {
+    top: 125%;
   }
   form .join i,
   form .saber i {
@@ -765,19 +776,10 @@ footer .footerContainer p {
 
 @media (max-width: 320px) {
   header {
-    min-height: 55vh;
+    min-height: 40vh;
   }
-  header .heroTitle {
-    font-size: 2.5rem;
-  }
-  header .hero .first {
-    top: 126%;
-  }
-  header .hero i {
-    top: 130%;
-  }
-  header .hero p {
-    left: 32.5%;
+  header .hero .heroTitle {
+    font-size: 2rem;
   }
   form .join {
     display: -webkit-box;
